--- a/src/app/components/group-list/group-list.component.html
+++ b/src/app/components/group-list/group-list.component.html
@@ -12,9 +12,8 @@
             </div>
             <div class="col-md-2 p-0 flexRight">
                 <button class="btn btn-success text-center" (click)="AddNewPage()">
-                    <img alt="phonevector" class="filter-green"
-                        src="../../../assets/img/icons/Create Promotion.svg">
-                        Add New Group
+                    <img alt="phonevector" class="filter-green" src="../../../assets/img/icons/Create Promotion.svg">
+                    Add New Group
                 </button>
             </div>
             <!-- <div>
@@ -30,23 +29,23 @@
             <td mat-cell *matCellDef="let element"> {{element.businessGroupName}} </td>
         </ng-container>
         <ng-container matColumnDef="packageTypeName">
-            <th mat-header-cell *matHeaderCellDef> Package Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.packageTypeName}} </td>
+            <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Package Type </th>
+            <td mat-cell *matCellDef="let element" style="text-align: center;"> {{element.packageTypeName}} </td>
         </ng-container>
         <ng-container matColumnDef="industryType">
             <th mat-header-cell *matHeaderCellDef> Industry Type </th>
             <td mat-cell *matCellDef="let element"> {{element.industryType}} </td>
         </ng-container>
         <ng-container matColumnDef="countLocations">
-            <th mat-header-cell *matHeaderCellDef> Count Locations </th>
-            <td mat-cell *matCellDef="let element"> {{element.countLocations}} </td>
+            <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Count Locations </th>
+            <td mat-cell *matCellDef="let element" style="text-align: center;"> {{element.countLocations}} </td>
         </ng-container>
         <ng-container matColumnDef="Action">
-            <th style="text-align: left;" *matHeaderCellDef>
+            <th mat-header-cell style="text-align: center;" *matHeaderCellDef>
                 Edit
             </th>
-            <td style="text-align: left;" mat-cell *matCellDef="let element">
-                <div style="text-align: left;">
+            <td style="text-align: center;" mat-cell *matCellDef="let element">
+                <div>
                     <button (click)="Edit(element)" class="mr-2 editClass">Edit&nbsp;&nbsp;
                         <i class="fa fa-pencil"></i>
                     </button>
