--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -74,3 +74,10 @@ i.icon-fs-info {
     color: red;
     font-weight: 500;
 }
+
+::ng-deep.mdc-label{
+    margin-top: 10px;
+}
+.datePicker{
+    padding: 1px;
+}
