Stepper code merge

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -78,3 +78,11 @@ i.icon-fs-info {
 ::ng-deep .multiselect-dropdown[_ngcontent-ng-c1411523848] .dropdown-btn[_ngcontent-ng-c1411523848] .selected-item-container[_ngcontent-ng-c1411523848] .selected-item[_ngcontent-ng-c1411523848] {
     max-width: none !important;
 }
+
+::ng-deep.mdc-label{
+    margin-top: 10px;
+}
+
+.datePicker{
+    padding: 1px;
+}
