--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -80,11 +80,11 @@ i.icon-fs-info {
     max-width: none !important;
 }
 
-::ng-deep.mdc-label{
+::ng-deep.mdc-label {
     margin-top: 10px;
 }
 
-.datePicker{
+.datePicker {
     padding: 1px;
 }
 
@@ -97,4 +97,12 @@ i.icon-fs-info {
 
 .filter-green {
     filter: brightness(0) invert(1);
+}
+
+::ng-deep input.mat-mdc-chip-input {
+    margin-left: 0px !important;
+}
+
+.accordion {
+    margin-bottom: 1%;
 }
