--- a/src/app/components/group-list/group-list.component.html
+++ b/src/app/components/group-list/group-list.component.html
@@ -1,58 +1,123 @@
-<div class="bodyclass">
-    <div>
-        <div class="col-md-12 flexdivHeader">
-            <div class="col-md-7">
-                <h1 class="headerName">
-                    <img style="margin-top: -5px;height: 25px;" src="../../../assets/img/icons/Promotion.svg">
-                    Business Group List
-                </h1>
+<app-navbar></app-navbar>
+
+<div class="wrapper">
+    <div class="row ml-2 d-flex">
+        <div class="col-md-7 mt-3 d-flex" style="align-items: center;">
+            <div class="navbar-brand">
+                <img src="../../../assets/img/icons/Promotion.svg" height="28" alt="CoolBrand">
             </div>
-            <div class="col-md-3">
-                <input class="form-control" placeholder="Search By Group Name" autocomplete="off" />
-            </div>
-            <div class="col-md-2 p-0 flexRight">
-                <button class="btn btn-success text-center" (click)="AddNewPage()">
-                    <img alt="phonevector" class="filter-green" src="../../../assets/img/icons/Create Promotion.svg">
-                    Add New Group
-                </button>
-            </div>
-            <!-- <div>
-                <button (click)="exitPage()" mat-button color="primary" class="logoutbtn">
-                    Logout
-                </button>
-            </div> -->
+            <h2>Business Group</h2>
+        </div>
+        <div class="col-md-3 mt-3 d-flex">
+            <input class="form-control" placeholder="Search By Group Name" autocomplete="off" (keyup)="applyFilters($event)" />
+        </div>
+        <div class="col-md-2 text-right mt-3">
+            <button class="btn btn-success text-center" (click)="AddNewPage()">
+                <img alt="phonevector" class="filter-green" src="../../../assets/img/icons/Create Promotion.svg">
+                Add Group
+            </button>
         </div>
     </div>
-    <table mat-table [dataSource]="dataSource">
-        <ng-container matColumnDef="businessGroupName">
-            <th mat-header-cell *matHeaderCellDef> Business Group Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.businessGroupName}} </td>
-        </ng-container>
-        <ng-container matColumnDef="packageTypeName">
-            <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Package Type </th>
-            <td mat-cell *matCellDef="let element" style="text-align: center;"> {{element.packageTypeName}} </td>
-        </ng-container>
-        <ng-container matColumnDef="industryType">
-            <th mat-header-cell *matHeaderCellDef> Industry Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.industryType}} </td>
-        </ng-container>
-        <ng-container matColumnDef="countLocations">
-            <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Count Locations </th>
-            <td mat-cell *matCellDef="let element" style="text-align: center;"> {{element.countLocations}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Action">
-            <th mat-header-cell style="text-align: center;" *matHeaderCellDef>
-                Edit
-            </th>
-            <td style="text-align: center;" mat-cell *matCellDef="let element">
-                <div>
-                    <button (click)="Edit(element)" class="editClass">Edit
-                        <i class="fa fa-pencil"></i>
-                    </button>
+    <div class="col-md-12 ml-2">
+    </div>
+    <div style="border-bottom: 1px solid #DADCDC;margin: 15px;"></div>
+    <div class="col-lg-12">
+        <table mat-table [dataSource]="dataSource">
+            <ng-container matColumnDef="businessGroupName">
+                <th mat-header-cell *matHeaderCellDef> Business Group Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.businessGroupName}} </td>
+            </ng-container>
+            <ng-container matColumnDef="packageTypeName">
+                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Package Type </th>
+                <td mat-cell *matCellDef="let element" style="text-align: center;"> {{element.packageTypeName}} </td>
+            </ng-container>
+            <ng-container matColumnDef="industryType">
+                <th mat-header-cell *matHeaderCellDef> Industry Type </th>
+                <td mat-cell *matCellDef="let element"> {{element.industryType}} </td>
+            </ng-container>
+            <ng-container matColumnDef="countLocations">
+                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> (Active / Total) Location Count </th>
+                <td mat-cell *matCellDef="let element" style="text-align: center;"> {{element.activeLocationsCount}} /
+                    {{element.countLocations}}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="Edit">
+                <th mat-header-cell style="text-align: center;" *matHeaderCellDef>
+                    Edit
+                </th>
+                <td style="text-align: center;" mat-cell *matCellDef="let element">
+                    <div style="display: flex;align-items: center;justify-content: center;">
+                        <button (click)="Edit(element)" class="editClass">Edit
+                            <i class="fa fa-pencil"></i>
+                        </button>
+                    </div>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="Enable Group">
+                <th mat-header-cell style="text-align: center;" *matHeaderCellDef>
+                    Enable
+                </th>
+                <td style="text-align: center;" mat-cell *matCellDef="let element">
+                    <div class="form-check form-switch ml-3 text-center">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked"
+                            data-target="#modalForNull" data-toggle="modal" [disabled]="element.isActive"
+                            [checked]="element.isActive" (change)="toggleBusinessGroup(element)" />
+                    </div>
+                </td>
+            </ng-container>
+            <tr mat-header-row class="tableHeaderCellDiv" *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
+        </table>
+
+        <!-- Modal for SMS Profile and SMS From Phone Number -->
+        <div class="modal fade" id="modalForNull" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true" data-backdrop="static" data-keyboard="false">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"></h5>
+                        <button #closeModal type="button" class="close" data-dismiss="modal" aria-label="Close"
+                            (click)="getBusinessGroups()">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form [formGroup]="firstFormGroup">
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">SMS Profile:</label>
+                                <input type="text" class="form-control" id="recipient-name" autocomplete="off"
+                                    formControlName="SMSProfileID"
+                                    [ngClass]="{ 'is-invalid': submitted && firstFormGroup.controls['SMSProfileID'].errors }">
+                                <div *ngIf="submitted && firstFormGroup.controls['SMSProfileID'].errors"
+                                    class="invalid-feedback">
+                                    <div *ngIf="firstFormGroup.controls['SMSProfileID'].errors['required']">
+                                        SMS Profile is required
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="message-text" class="col-form-label">SMS From Phone Number:</label>
+                                <input type="text" class="form-control" id="message-text" autocomplete="off"
+                                    (keypress)="numberOnly($event)" formControlName="SMSPhoneNumber"
+                                    [ngClass]="{ 'is-invalid': submitted && firstFormGroup.controls['SMSPhoneNumber'].errors }"
+                                    maxlength="10" />
+                                <div *ngIf="submitted && firstFormGroup.controls['SMSPhoneNumber'].errors"
+                                    class="invalid-feedback">
+                                    <div *ngIf="firstFormGroup.controls['SMSPhoneNumber'].errors['required']">
+                                        SMS From Phone No. is required
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" (click)="Submit()" class="btn btn-primary">Submit</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            (click)="getBusinessGroups()">Close</button>
+                    </div>
                 </div>
-            </td>
-        </ng-container>
-        <tr mat-header-row class="tableHeaderCellDiv" *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns; "></tr>
-    </table>
+            </div>
+        </div>
+        <!-- Modal for SMS Profile and SMS From Phone Number -->
+    </div>
 </div>
