--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
             <div style="padding: 15.91px; left: 60px; top: 0px; position: absolute; flex-direction: column;
                   justify-content: flex-start; align-items: flex-start; gap: 15.91px; display: inline-flex">
                 <div>
-                    <img src="../../../assets/SplashLogo.png" />
+                    <img src="assets/SplashLogo.png" />
                 </div>
             </div>
             <div style="padding: 177px 0px 0px 122px; position: absolute; color: #233138; font-size: 18px;
