--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,74 @@
 <nav class="navbar navbar-expand-lg navbar-ligh menu-header">
-    <div class="col-md-2 pl-0">
-        <a class="navbar-brand" href="/default">
-            <img src="../assets/SplashLogo.png" style="width: 100%;" alt="" class="logo logo-lg" />
-        </a>
+  <div class="col-md-2 pl-0 pr-0 d-flex">
+    <a class="navbar-brand" href="/default">
+      <img
+        src="assets/SplashLogo.png"
+        style="width: 100%"
+        alt=""
+        class="logo logo-lg"
+      />
+    </a>
+  </div>
+  <div class="col-md-2 pl-0">
+    <div
+      class="collapse navbar-collapse navbar-light topnav headerClass"
+      id="navbarNavDropdown"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link menu-items" [routerLinkActive]="['active']" routerLink="/group-list">
+            <span class="fa fa-group" style="color: #7da3ba"></span> GroupList
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle menu-items"
+            [routerLinkActive]="['active']"
+            href="#"
+            id="navbarDropdownMenuLink1"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <span class="fa fa-book" style="color: #7da3ba"></span>
+            Billing
+          </a>
+          <div
+            class="dropdown-menu"
+            aria-labelledby="navbarDropdownMenuLink1"
+            style="margin-top: 5px"
+          >
+            <a
+              class="dropdown-item subMenu-text"
+              [routerLinkActive]="['active']"
+              routerLink="/invoice-list"
+            >
+              <span
+                class="fa fa-file-text subMenu-icon"
+                style="color: #7da3ba"
+              ></span>
+              Invoice
+            </a>
+            <a
+              class="dropdown-item subMenu-text"
+              [routerLinkActive]="['active']"
+              routerLink="/payment-list"
+            >
+              <span
+                class="fa fa-credit-card subMenu-icon"
+                style="color: #7da3ba"
+              ></span>
+              Payment
+            </a>
+          </div>
+        </li>
+      </ul>
     </div>
-    <div class="col-md-10" style="text-align: end;">
-        <a style="cursor: pointer;" (click)="logout()">
-            <span class="fa fa-sign-out subMenu-icon"></span>
-            Sign Out
-        </a>
-    </div>
+  </div>
+  <div class="col-md-8" style="text-align: end">
+    <a style="cursor: pointer" (click)="logout()">
+      <span class="fa fa-sign-out subMenu-icon"></span>
+      Sign Out
+    </a>
+  </div>
 </nav>
