--- a/src/app/components/group-list/group-list.component.html
+++ b/src/app/components/group-list/group-list.component.html
@@ -9,7 +9,8 @@
             <h2>Business Group</h2>
         </div>
         <div class="col-md-3 mt-3 d-flex">
-            <input class="form-control" placeholder="Search By Group Name" autocomplete="off" (keyup)="applyFilters($event)" />
+            <input class="form-control" placeholder="Search By Group Name" autocomplete="off"
+                (keyup)="applyFilters($event)" />
         </div>
         <div class="col-md-2 text-right mt-3">
             <button class="btn btn-success text-center" (click)="AddNewPage()">
@@ -24,26 +25,26 @@
     <div class="col-lg-12">
         <table mat-table [dataSource]="dataSource">
             <ng-container matColumnDef="businessGroupName">
-                <th mat-header-cell *matHeaderCellDef> Business Group Name </th>
+                <th mat-header-cell *matHeaderCellDef> <b>Business Group Name</b> </th>
                 <td mat-cell *matCellDef="let element"> {{element.businessGroupName}} </td>
             </ng-container>
             <ng-container matColumnDef="packageTypeName">
-                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Package Type </th>
+                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> <b>Package Type</b> </th>
                 <td mat-cell *matCellDef="let element" style="text-align: center;"> {{element.packageTypeName}} </td>
             </ng-container>
             <ng-container matColumnDef="industryType">
-                <th mat-header-cell *matHeaderCellDef> Industry Type </th>
+                <th mat-header-cell *matHeaderCellDef> <b>Industry Type</b> </th>
                 <td mat-cell *matCellDef="let element"> {{element.industryType}} </td>
             </ng-container>
             <ng-container matColumnDef="countLocations">
-                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> (Active / Total) Location Count </th>
+                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> <b>(Active / Total) Location Count</b> </th>
                 <td mat-cell *matCellDef="let element" style="text-align: center;"> {{element.activeLocationsCount}} /
                     {{element.countLocations}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="Edit">
                 <th mat-header-cell style="text-align: center;" *matHeaderCellDef>
-                    Edit
+                    <b>Edit</b>
                 </th>
                 <td style="text-align: center;" mat-cell *matCellDef="let element">
                     <div style="display: flex;align-items: center;justify-content: center;">
@@ -55,7 +56,7 @@
             </ng-container>
             <ng-container matColumnDef="Enable Group">
                 <th mat-header-cell style="text-align: center;" *matHeaderCellDef>
-                    Enable
+                    <b>Enable</b>
                 </th>
                 <td style="text-align: center;" mat-cell *matCellDef="let element">
                     <div class="form-check form-switch ml-3 text-center">
